[gd_scene load_steps=4 format=3 uid="uid://cckqj7i1coabb"]

[ext_resource type="Texture2D" uid="uid://dt3buovo47xk5" path="res://UI/DALL·E 2024-02-12 10.01.04 - Create a pixel art image of a mythical land named 'Magic Soil'. The image should feature fantastical landscapes with towering magical trees, sparkling.webp" id="1_0edaw"]
[ext_resource type="Texture2D" uid="uid://dhyfxcvagxlmw" path="res://UI/170770350744020.png" id="2_qglkn"]
[ext_resource type="Script" path="res://UI/mainmenu.gd" id="3_w8u6y"]

[node name="begin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_offset = Vector2(2.685, 2.58)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(468, 147)
texture = ExtResource("1_0edaw")

[node name="ui" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 3.0

[node name="title" type="TextureRect" parent="ui"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_qglkn")

[node name="mainmenu" type="VBoxContainer" parent="ui"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("3_w8u6y")

[node name="Start" type="Button" parent="ui/mainmenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "单人游戏"

[node name="duo" type="Button" parent="ui/mainmenu"]
layout_mode = 2
text = "多人游戏"

[node name="Option" type="Button" parent="ui/mainmenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "设置"

[node name="Quit" type="Button" parent="ui/mainmenu"]
layout_mode = 2
size_flags_horizontal = 4
text = "退出"

[connection signal="pressed" from="ui/mainmenu/Start" to="ui/mainmenu" method="_on_start_pressed"]
[connection signal="pressed" from="ui/mainmenu/duo" to="ui/mainmenu" method="_on_duo_pressed"]
[connection signal="pressed" from="ui/mainmenu/Option" to="ui/mainmenu" method="_on_option_pressed"]
[connection signal="pressed" from="ui/mainmenu/Quit" to="ui/mainmenu" method="_on_quit_pressed"]
